# tiny-kubernetes

./: .coveragerc  .gitreview  .stestr.conf  HACKING.rst  README.md  README.rst  requirements.txt  setup.cfg  tox.ini
doc/source/: conf.py  index.rst
doc/source/admin/: index.rst
doc/source/cli/: index.rst
doc/source/configuration/: index.rst
doc/source/install/: common_configure.rst  common_prerequisites.rst  get_started.rst  index.rst  install-obs.rst  install-rdo.rst  install-ubuntu.rst  install.rst  next-steps.rst
doc/source/reference/: index.rst
doc/source/user/: index.rst
releasenotes/source/: conf.py  index.rst
tiny_kubernetes/: __init__.py  kubernetes.py  tiny_kubernetes.py
tiny_kubernetes/tests/: test_tiny_kubernetes.py
