[metadata]
name = tiny-kubernetes
summary = A tiny Kubernetes client for Python
description-file = README.md
long_description_content_type = text/markdown
author = Monasca team
author-email = monasca@lists.launchpad.net
home-page = http://github.com/monasca/tiny-kubernetes/
license = Apache-2
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4

[files]
packages =
    tiny_kubernetes

[compile_catalog]
directory = tiny_kubernetes/locale
domain = tiny_kubernetes

[update_catalog]
domain = tiny_kubernetes
output_dir = tiny_kubernetes/locale
input_file = tiny_kubernetes/locale/tiny_kubernetes.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = tiny_kubernetes/locale/tiny_kubernetes.pot
